backing up files

--- a/cnf_grammar.cfg
+++ b/cnf_grammar.cfg
@@ -15,6 +15,10 @@ DT -> 'the'
 NN -> 'muscle'
 JJ -> 'tired'
 PUNC -> '?'
+RB -> 'Not'
+DT -> 'that'
+CD -> 'one'
+PUNC -> '.'
 NNS -> 'Muscles'
 VP -> VBP PP
 VBP -> 'grow'
@@ -630,6 +634,7 @@ NP -> 'muscles'
 NP -> 'locations'
 NP -> 'people'
 NP -> 'people'
+ADVP -> 'Not'
 ADVP -> 'finally'
 ADVP -> 'normally'
 ADVP -> 'Not'
@@ -737,6 +742,7 @@ NP -> 'insertion'
 NP -> 'research'
 NP -> 'arthritis'
 NP -> 'disease'
+ADVP -> 'Not'
 ADVP -> 'finally'
 ADVP -> 'normally'
 ADVP -> 'Not'
@@ -842,87 +848,90 @@ S -> NP _X0_
 _X1_ -> ADJP PUNC
 _X2_ -> VBZ NP
 S -> _X2_ _X1_
-_X3_ -> VP PUNC
-S -> NP _X3_
-_X4_ -> S PUNC
-_X5_ -> S CC
-S -> _X5_ _X4_
-_X6_ -> NN NN
-_X7_ -> DT JJ
-NP -> _X7_ _X6_
-_X8_ -> PRT PP
-VP -> VBN _X8_
-_X9_ -> NN NN
-NP -> ADJP _X9_
-_X10_ -> NN NN
-_X11_ -> DT JJ
-NP -> _X11_ _X10_
-_X12_ -> PRT PP
-VP -> VBN _X12_
-_X13_ -> NN NN
-NP -> ADJP _X13_
-_X14_ -> VP PUNC
-S -> NP _X14_
+_X3_ -> CD PUNC
+_X4_ -> RB DT
+S -> _X4_ _X3_
+_X5_ -> VP PUNC
+S -> NP _X5_
+_X6_ -> S PUNC
+_X7_ -> S CC
+S -> _X7_ _X6_
+_X8_ -> NN NN
+_X9_ -> DT JJ
+NP -> _X9_ _X8_
+_X10_ -> PRT PP
+VP -> VBN _X10_
+_X11_ -> NN NN
+NP -> ADJP _X11_
+_X12_ -> NN NN
+_X13_ -> DT JJ
+NP -> _X13_ _X12_
+_X14_ -> PRT PP
+VP -> VBN _X14_
 _X15_ -> NN NN
-_X16_ -> DT JJ
-NP -> _X16_ _X15_
-_X17_ -> VP PUNC
-S -> NP _X17_
-_X18_ -> VP PUNC
-S -> NP _X18_
-_X19_ -> NNP NNP
-NP -> NNP _X19_
-_X20_ -> NN NN
-NP -> DT _X20_
-_X21_ -> VP PUNC
-S -> NP _X21_
+NP -> ADJP _X15_
+_X16_ -> VP PUNC
+S -> NP _X16_
+_X17_ -> NN NN
+_X18_ -> DT JJ
+NP -> _X18_ _X17_
+_X19_ -> VP PUNC
+S -> NP _X19_
+_X20_ -> VP PUNC
+S -> NP _X20_
+_X21_ -> NNP NNP
+NP -> NNP _X21_
 _X22_ -> NN NN
 NP -> DT _X22_
-_X23_ -> NN NNS
-_X24_ -> NN CC
-_X25_ -> VP PUNC
-S -> NP _X25_
-_X26_ -> NN NN
-NP -> DT _X26_
+_X23_ -> VP PUNC
+S -> NP _X23_
+_X24_ -> NN NN
+NP -> DT _X24_
+_X25_ -> NN NNS
+_X26_ -> NN CC
 _X27_ -> VP PUNC
-_X28_ -> VBP NP
-S -> _X28_ _X27_
-_X29_ -> PP PP
-NP -> NP _X29_
-_X30_ -> VP PUNC
-_X31_ -> NP ADVP
-S -> _X31_ _X30_
+S -> NP _X27_
+_X28_ -> NN NN
+NP -> DT _X28_
+_X29_ -> VP PUNC
+_X30_ -> VBP NP
+S -> _X30_ _X29_
+_X31_ -> PP PP
+NP -> NP _X31_
 _X32_ -> VP PUNC
-S -> NP _X32_
-_X33_ -> PP VP
-NP -> NP _X33_
+_X33_ -> NP ADVP
+S -> _X33_ _X32_
 _X34_ -> VP PUNC
 S -> NP _X34_
-_X35_ -> CD PUNC
-_X36_ -> RB DT
-FRAG -> _X36_ _X35_
-_X37_ -> VP PUNC
-_X38_ -> IN NP
+_X35_ -> PP VP
+NP -> NP _X35_
+_X36_ -> VP PUNC
+S -> NP _X36_
+_X37_ -> CD PUNC
+_X38_ -> RB DT
 FRAG -> _X38_ _X37_
 _X39_ -> VP PUNC
-S -> NP _X39_
-_X40_ -> ADJP NN
-NP -> DT _X40_
+_X40_ -> IN NP
+S -> _X40_ _X39_
 _X41_ -> VP PUNC
 S -> NP _X41_
-_X42_ -> VP PUNC
-S -> NP _X42_
-_X43_ -> NN NNS
-NP -> JJ _X43_
+_X42_ -> ADJP NN
+NP -> DT _X42_
+_X43_ -> VP PUNC
+S -> NP _X43_
 _X44_ -> VP PUNC
 S -> NP _X44_
-_X45_ -> VP PUNC
-S -> NP _X45_
-_X46_ -> JJ NN
-NP -> DT _X46_
-_X47_ -> PRT PP
-S -> VBN _X47_
-_X48_ -> PRT PP
-S -> VBN _X48_
-_X49_ -> _X24_ _X23_
-NP -> DT _X49_
+_X45_ -> NN NNS
+NP -> JJ _X45_
+_X46_ -> VP PUNC
+S -> NP _X46_
+_X47_ -> VP PUNC
+S -> NP _X47_
+_X48_ -> JJ NN
+NP -> DT _X48_
+_X49_ -> PRT PP
+S -> VBN _X49_
+_X50_ -> PRT PP
+S -> VBN _X50_
+_X51_ -> _X26_ _X25_
+NP -> DT _X51_
