--- a/grammar.cfg
+++ b/grammar.cfg
@@ -31,6 +31,14 @@ JJ -> "tired"
 
 PUNC -> '?'
 
+#Not that one.
+S -> RB DT CD PUNC
+
+RB -> "Not"
+DT -> "that"
+CD -> "one"
+PUNC -> '.'
+
 #Muscles grow in response to work.
 S -> NP VP PUNC
 
@@ -316,7 +324,7 @@ CD -> "one"
 PUNC -> '.'
 
 #Before the discovery of DNA heredity was a mystery.
-FRAG -> IN NP VP PUNC
+S -> IN NP VP PUNC
 
 IN -> "Before"
 
